fix dark mode

--- a/default.css
+++ b/default.css
@@ -97,6 +97,10 @@ h6 { font-size: 16px; }
 
 }
 
+#navigation a{
+  color: var(--mainText)
+}
+
 #navigation{
   margin:0;
   padding: 10px;
@@ -242,15 +246,80 @@ h6 { font-size: 16px; }
   right: -5px;
 }
 
-#corner-bl{
+#corner-br{
   bottom: -5px;
   left: -5px;
 }
 
-#corner-br{
+#corner-bl{
   bottom: -5px;
   right: -5px;
 }
+
+.about-wrapper{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding-bottom: 50px;
+  padding-top: 50px;
+  gap: 100px;
+}
+
+#skills{
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--previewShadow)
+}
+
+.social-links{
+  display: grid;
+  align-content:center;
+  text-align:center;
+
+}
+
+#social_img{
+  width: 100%
+}
+
+.post-wrapper{
+  display:grid;
+  grid-template-columns: repeat(auto-fit, 320px);
+  gap: 220px;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+.post{
+  border: 1px solid var(--borderColor);
+  -webkit-box-shadow: 3px 2px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 3px 2px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 3px 2px 5px 0px rgba(0,0,0,0.75);
+}
+
+.thumbnail{
+  display: block;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+
+}
+
+.post-preview{
+  background-color: #fff;
+  padding: 15px;
+}
+
+.post-title{
+  color: black;
+  margin: 0;
+}
+
+.post-intro{
+  color: black;
+  font: 14px
+}
+
+
 
 
 
